--- a/255MTOlheiser/255MTOlheiser/MainWindow.xaml
+++ b/255MTOlheiser/255MTOlheiser/MainWindow.xaml
@@ -22,6 +22,7 @@
         <CheckBox x:Name="ExpensesCheckbox" Content="Show Expenses" HorizontalAlignment="Left" Margin="718,118,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="TaxesCheckbox" Content="Show Taxes" HorizontalAlignment="Left" Margin="615,118,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="SalesCheckbox" Content="Show Sales Total" HorizontalAlignment="Left" Margin="484,118,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="ErrorLabel" Content="Error Label" HorizontalAlignment="Left" Margin="59,104,0,0" VerticalAlignment="Top" Width="306" Foreground="Red"/>
 
     </Grid>
 </Window>
