--- a/comp255_DiceRollArray/comp255_DiceRollArray/MainWindow.xaml
+++ b/comp255_DiceRollArray/comp255_DiceRollArray/MainWindow.xaml
@@ -13,6 +13,7 @@
         <TextBox x:Name="DiceRollsTextbox" HorizontalAlignment="Left" Height="23" Margin="208,68,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <ListBox x:Name="OutputListbox" HorizontalAlignment="Left" Height="242" Margin="32,147,0,0" VerticalAlignment="Top" Width="296"/>
         <Button x:Name="RollButton" Content="Roll Dice!" HorizontalAlignment="Left" Margin="253,98,0,0" VerticalAlignment="Top" Width="75" Click="RollButton_Click"/>
+        <Label x:Name="ErrorLabel" Content="Error Label" HorizontalAlignment="Left" Margin="32,95,0,0" VerticalAlignment="Top" Width="216" Foreground="Red"/>
 
     </Grid>
 </Window>
