--- a/comp255_Collections/comp255_Collections/MainWindow.xaml
+++ b/comp255_Collections/comp255_Collections/MainWindow.xaml
@@ -1,23 +1,24 @@
-﻿<Window x:Class="List_Demo.MainWindow"
+﻿<Window x:Class="COMP255_CustomerAccounts.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:List_Demo"
+        xmlns:local="clr-namespace:COMP255_CustomerAccounts"
         mc:Ignorable="d"
-        Title="MainWindow" Height="511.547" Width="525">
+        Title="MainWindow" Height="249.935" Width="401.345">
     <Grid>
-        <ListBox x:Name="ContactListBox" HorizontalAlignment="Left" Height="205" Margin="34,23,0,0" VerticalAlignment="Top" Width="450" />
-        <Button x:Name="LoadListButton" Content="Load List" HorizontalAlignment="Left" Margin="335,240,0,0" VerticalAlignment="Top" Width="75" />
-        <Button x:Name="RemoveItem" Content="Remove Selected Item" HorizontalAlignment="Left" Margin="335,266,0,0" VerticalAlignment="Top" Width="142" />
-        <Label x:Name="label" Content="FullName" HorizontalAlignment="Left" Margin="42,255,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="FullNameTextBox" HorizontalAlignment="Left" Height="23" Margin="107,258,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label_Copy" Content="First Name" HorizontalAlignment="Left" Margin="42,284,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="FirstNameTextBox" HorizontalAlignment="Left" Height="23" Margin="107,287,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label_Copy1" Content="LastName" HorizontalAlignment="Left" Margin="42,313,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="LastNameTextBox" HorizontalAlignment="Left" Height="23" Margin="107,316,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="label_Copy2" Content="Email" HorizontalAlignment="Left" Margin="42,341,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="EmailTextBox" HorizontalAlignment="Left" Height="23" Margin="107,344,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="PreviousButton" Content="Previous" HorizontalAlignment="Left" Margin="29,28,0,0" VerticalAlignment="Top" Width="76" Click="PreviousButton_Click"/>
+        <Button x:Name="NextButton" Content="Next" HorizontalAlignment="Left" Margin="186,28,0,0" VerticalAlignment="Top" Width="76" Click="NextButton_Click"/>
+        <Button x:Name="AddButton" Content="Add New" HorizontalAlignment="Left" Margin="282,70,0,0" VerticalAlignment="Top" Width="76" Click="AddButton_Click"/>
+        <Button x:Name="SaveButton" Content="Save" HorizontalAlignment="Left" Margin="282,101,0,0" VerticalAlignment="Top" Width="76" Click="SaveButton_Click"/>
+        <Label Content="First Name:" HorizontalAlignment="Left" Margin="29,64,0,0" VerticalAlignment="Top"/>
+        <Label Content="Last Name:" HorizontalAlignment="Left" Margin="29,95,0,0" VerticalAlignment="Top"/>
+        <Label Content="Account Number:" HorizontalAlignment="Left" Margin="29,126,0,0" VerticalAlignment="Top"/>
+        <Label Content="Balance:" HorizontalAlignment="Left" Margin="29,157,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="FirstNameTextbox" HorizontalAlignment="Left" Height="20" Margin="142,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="LastNameTextbox" HorizontalAlignment="Left" Height="23" Margin="142,98,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="AccountNumberTextbox" HorizontalAlignment="Left" Height="23" Margin="142,129,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <TextBox x:Name="BalanceTextbox" HorizontalAlignment="Left" Height="23" Margin="142,160,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
